--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,45 @@
 asgiref==3.2.10
-django>=2.2.13
-pytz==2020.1
-sqlparse==0.3.1
+astor==0.8.1
+attrs==19.3.0
+bandit==1.6.2
+darglint==1.5.2
+Django==3.0.8
+docutils==0.16
+eradicate==1.0
+flake8==3.8.3
+flake8-bandit==2.1.2
+flake8-broken-line==0.2.1
+flake8-bugbear==19.8.0
+flake8-commas==2.0.0
+flake8-comprehensions==3.2.3
+flake8-debugger==3.2.1
+flake8-docstrings==1.5.0
+flake8-eradicate==0.3.0
+flake8-isort==3.0.1
+flake8-polyfill==1.0.2
+flake8-quotes==2.1.2
+flake8-rst-docstrings==0.0.12
+flake8-string-format==0.2.3
+gitdb==4.0.5
+GitPython==3.1.7
 gunicorn==20.0.4
-
-
+isort==4.3.21
+mccabe==0.6.1
+pbr==5.4.5
+pep8-naming==0.9.1
+pycodestyle==2.6.0
+pydocstyle==5.0.2
+pyflakes==2.2.0
+Pygments==2.6.1
+pygraphviz==1.6
+pytz==2020.1
+PyYAML==5.3.1
+restructuredtext-lint==1.3.1
+six==1.15.0
+smmap==3.0.4
+snowballstemmer==2.0.0
+sqlparse==0.3.1
+stevedore==3.2.0
+testfixtures==6.14.1
+toml==0.10.1
+typing-extensions==3.7.4.2
