--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 asgiref = "==3.2.10"
-django = ">=2.2.13"
+Django = ">=3.1.13"
 pytz = "==2020.1"
 sqlparse = "==0.3.1"
 gunicorn = "==20.0.4"
