Removed .gitignored files, removed cache for generated picture

--- a/.gitignore
+++ b/.gitignore
@@ -61,12 +61,7 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-# Flask stuff:
-instance/
-.webassets-cache
 
-# Scrapy stuff:
-.scrapy
 
 # Sphinx documentation
 docs/_build/
@@ -74,9 +69,6 @@ docs/_build/
 # PyBuilder
 .pybuilder/
 target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
 
 # IPython
 profile_default/
@@ -146,3 +138,5 @@ Pipfile.lock
 
 
 */migrations/*
+
+staticfiles/
